// Copyright 2025 AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto3";

package agoutshift.identity.service.v1alpha1;

// Package-wide variables from generator "generated".
option go_package = "github.com/outshift/identity-service/api/server/outshift/identity/service/v1alpha1;identity_service_sdk_go";

// Identity Service Session
message Session {
  // A unique identifier for the Session.
  optional string id = 1;

  // The owner application ID for which the Session is created.
  optional string owner_app_id = 2;

  // The application ID associated with the Session.
  optional string app_id = 3;

  // The tool name associated with the Session.
  optional string tool_name = 4;

  // The user ID associated with the Session.
  optional string user_id = 5;

  // The access token associated with the Session.
  optional string access_token = 6;

  // The authorization code associated with the Session.
  optional string code = 7;

  // The creation time of the Session.
  optional int64 created_at = 8;

  // The expiration time of the Session.
  optional int64 expires_at = 9;
}

message SessionDeviceOTP {
  // A unique identifier for the OTP.
  optional string id = 1;

  // The value of the OTP.
  optional string value = 2;

  // The Session that the OTP is generated for.
  optional string session_id = 3;

  // The Device that the OTP is generated for.
  optional string device_id = 4;

  // The creation time of the OTP.
  optional int64 created_at = 5;

  // The update time of the OTP.
  optional int64 updated_at = 6;

  // The expiration time of the OTP.
  optional int64 expires_at = 7;

  // A field that tells whether the OTP is approved or denied.
  optional bool approved = 8;

  // A field that tells whether the TOP is used or not.
  optional bool used = 9;
}
